wepons arent in theiur own folder. doesntr matter but let's be neat

--- a/Maccabian Janissaries/Core/Languages/English/Weapons.xml
+++ b/Maccabian Janissaries/Core/Languages/English/Weapons.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
-	<entry name="AstraMilitarum/MaccabianLasgun" value="Maccabian Lasgun"/>
-	<entry name="AstraMilitarum/MaccabianLasgunDescription" value="Similar to a bolter."/>
-	<entry name="AstraMilitarum/MaccabianLasgunFlavor" value=""/>
+	<entry name="MaccabianLasgun" value="Maccabian Lasgun"/>
+	<entry name="MaccabianLasgunDescription" value="Similar to a bolter."/>
+	<entry name="MaccabianLasgunFlavor" value=""/>
 </language>
