--- a/Maccabian Janissaries/Core/Languages/English/Weapons.xml
+++ b/Maccabian Janissaries/Core/Languages/English/Weapons.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
-	<entry name="MaccabianLasgun" value="Maccabian Lasgun"/>
+	<entry name="MaccabianLasgun" value="Sollex Pattern-IX &quot;Death Light&quot; Lasgun"/>
 	<entry name="MaccabianLasgunDescription" value="Similar to a bolter."/>
 	<entry name="MaccabianLasgunFlavor" value=""/>
 </language>
