--- a/Maccabian Janissaries/Data/Core/Languages/English/Traits.xml
+++ b/Maccabian Janissaries/Data/Core/Languages/English/Traits.xml
@@ -3,4 +3,7 @@
 	<entry name="AstraMilitarum/MaccabianJannisary" value=""/>
 	<entry name="AstraMilitarum/MaccabianJannisaryDescription" value=""/>
 	<entry name="AstraMilitarum/MaccabianJannisaryFlavor" value=""/>
+	<entry name="AstraMilitarum/Prayed" value="Prayed"/>
+	<entry name="AstraMilitarum/PrayedDescription" value=""/>
+	<entry name="AstraMilitarum/PrayedFlavor" value=""/>
 </language>
