--- a/Maccabian Janissaries/Data/Core/Languages/English/Traits.xml
+++ b/Maccabian Janissaries/Data/Core/Languages/English/Traits.xml
@@ -1,9 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
-	<entry name="AstraMilitarum/MaccabianJannisary" value=""/>
-	<entry name="AstraMilitarum/MaccabianJannisaryDescription" value=""/>
-	<entry name="AstraMilitarum/MaccabianJannisaryFlavor" value=""/>
+	<entry name="AstraMilitarum/MaccabianJannisary" value="Maccabian Jannisary"/>
+	<entry name="AstraMilitarum/MaccabianJannisaryDescription" value="When facing the forces of Chaos, has increased accuracy but takes more damage. <string name='ChaosSpaceMarines/MaliciousVolleysDescription'>"/>
+	<entry name="AstraMilitarum/MaccabianJannisaryFlavor" value="On the Shrine World of Maccabeus Quintus, faith is paramount. They hate the archenemy, and this hatred is their primary weapon. Everyone in the Maccabian Militia wields this, but only the cream of the crop may have the honour of joining the Maccabian Jannisaries."/>
 	<entry name="AstraMilitarum/Prayed" value="Prayed"/>
-	<entry name="AstraMilitarum/PrayedDescription" value=""/>
-	<entry name="AstraMilitarum/PrayedFlavor" value=""/>
+	<entry name="AstraMilitarum/PrayedDescription" value="Unit has prayed. On loss of this trait, lose all morale."/>
+	<entry name="AstraMilitarum/PrayedFlavor" value="&quot;A prayer a day keeps the archenemy away&quot;"/>
+	<entry name="AstraMilitarum/HolyProtection" value="Holy Protection"/>
+	<!-- <entry name="AstraMilitarum/HolyProtectionDescription" value=""/> -->
+	<entry name="AstraMilitarum/HolyProtectionFlavor" value="&quot;My faith is my shield&quot;"/>
+	<entry name="AstraMilitarum/ShieldOfFaith" value="<string name='SistersOfBattle/ShieldOfFaith'>"/>
+	<entry name="AstraMilitarum/ShieldOfFaithDescription" value="<string name='SistersOfBattle/ShieldOfFaithDescription'>"/>
+	<entry name="AstraMilitarum/ShieldOfFaithFlavor" value="&quot;A prayer a day keeps the archenemy away&quot;"/>
 </language>
