--- a/Maccabian Janissaries/Data/Core/Languages/English/Units.xml
+++ b/Maccabian Janissaries/Data/Core/Languages/English/Units.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
 	<entry name="AstraMilitarum/MaccabianJannisary" value="Maccabian Jannisaries"/>
-	<entry name="AstraMilitarum/MaccabianJannisaryDescription" value=""/>
+	<entry name="AstraMilitarum/MaccabianJannisaryDescription" value="Elite infantry equipped with heavy-duty lasguns. Specialised against the forces of Chaos. Needs to pray to be effective. "/>
 	<entry name="AstraMilitarum/MaccabianJannisaryFlavor" value=""/>
 	<entry name="AstraMilitarum/BattalionMaccabianJannisary" value="Battalion of <string name='Units/AstraMilitarum/MaccabianJannisary'/>"/>
 	<entry name="AstraMilitarum/BattalionMaccabianJannisaryDescription" value="<string name='Units/AstraMilitarum/MaccabianJannisaryDescription'/>"/>
