split shield of faith back out to make it more clear

--- a/Maccabian Janissaries/Data/Core/Languages/English/Traits.xml
+++ b/Maccabian Janissaries/Data/Core/Languages/English/Traits.xml
@@ -12,4 +12,7 @@
 	<entry name="AstraMilitarum/MaccabianSummoningSickness" value="Warp Travel Sickness"/>
 	<entry name="AstraMilitarum/MaccabianSummoningSicknessDescription" value="Until this unit Prays, combat effectiveness is massively reduced."/>
 	<entry name="AstraMilitarum/MaccabianSummoningSicknessFlavor" value="Warp travel can be perilous, even for the most pious of souls. Ironically, some of the most faithful can be the most affected by this proximity. \"/>
+	<entry name="AstraMilitarum/ShieldOfFaith" value="<string name='Traits/SistersOfBattle/ShieldOfFaith'/>"/>
+	<entry name="AstraMilitarum/ShieldOfFaithDescription" value="<string name='Traits/SistersOfBattle/ShieldOfFaithDescription'/>"/>
+	<entry name="AstraMilitarum/ShieldOfFaithFlavor" value="&quot;Even though I walk through the valley of the shadow of death, I fear no evil; for You are with me; Your Sword and Your Bolter &#8211; They comfort me.&quot;"/>
 </language>
