--- a/Maccabian Janissaries/Data/Core/Languages/English/Actions.xml
+++ b/Maccabian Janissaries/Data/Core/Languages/English/Actions.xml
@@ -2,7 +2,7 @@
 <language>
 	<entry name="AstraMilitarum/Pray" value="Pray"/>
 	<entry name="AstraMilitarum/PrayDescription" value="Temporarily gains Prayed, which allows the unit to perform normally. Temporarily gains increased defences for one turn. Restores morale."/>
-	<entry name="AstraMilitarum/PrayFlavor" value="&quot;The God-Emperor sacrificed Himself to save us all; in comparison, our offering in prayers is no effort. Come now, my brothers and sisters, offer our salutations to Him on Terra.&quot;"/>
+	<entry name="AstraMilitarum/PrayFlavor" value="&quot;The God-Emperor is greater. The God-Emperor is greater. I testify there is nothing worthy of worship except Him on Terra. &quot;"/> <!-- Adhan text -->
 	<entry name="UseWeapon/KrakGrenadeLauncher" value="Use <string name='Weapons/MaccabianKrakGrenadeLauncher'/>"/>
 	<entry name="UseWeapon/KrakGrenadeLauncherDescription" value="<string name='Weapons/MaccabianKrakGrenadeLauncherDescription'/>"/>
 	<entry name="UseWeapon/KrakGrenadeLauncherFlavor" value="<string name='Weapons/MaccabianKrakGrenadeLauncherFlavor'/>"/>
