basic abilities stripped and plasma pistol

--- a/Terrax Guard/Data/Core/Languages/English/Traits.xml
+++ b/Terrax Guard/Data/Core/Languages/English/Traits.xml
@@ -3,4 +3,7 @@
 	<entry name="AstraMilitarum/TerraxGuard" value=""/>
 	<entry name="AstraMilitarum/TerraxGuardDescription" value=""/>
 	<entry name="AstraMilitarum/TerraxGuardFlavor" value=""/>
+	<entry name="AstraMilitarum/TerraxDiscipline" value="Terrax Discipline"/>
+	<entry name="AstraMilitarum/TerraxDisciplineDescription" value=""/>
+	<entry name="AstraMilitarum/TerraxDisciplineFlavor" value=""/>
 </language>
