--- a/Terrax Guard/Data/Core/Languages/English/Traits.xml
+++ b/Terrax Guard/Data/Core/Languages/English/Traits.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
-	<entry name="AstraMilitarum/TerraxGuard" value=""/>
-	<entry name="AstraMilitarum/TerraxGuardDescription" value=""/>
-	<entry name="AstraMilitarum/TerraxGuardFlavor" value=""/>
+	<entry name="AstraMilitarum/TerraxGuard" value="Member of the Terrax Guard"/>
+	<entry name="AstraMilitarum/TerraxGuardDescription" value="Improved morale. Has reduced ranged attacks if adjacent to a Shaken ally, moreso if adjacent to a Broken ally."/>
+	<entry name="AstraMilitarum/TerraxGuardFlavor" value="On Terrax, the Schola Excubitos trains all planetary forces. In essence, every Guardsman in the Terrax Guard is trained, equipped, and held to the same standards as Tempestus Scions and Commissars. Even the lowest Guardsman is elite, and they carry this with pride. Most flaunted is their discipline, and they hold their peers to these impossible standards. Even in the midst of battle, fleeing troops will find that the Terrax Guard can swiftly turn their weapons on cowards. Cowardice is an affront to Terrax honour, and the thought of letting it go unpunished is unbearable. The Commissariat has given its blessing for these executions, as it can be handy to have an entire regiment of commissars on call."/>
 	<entry name="AstraMilitarum/TerraxDiscipline" value="Terrax Discipline"/>
-	<entry name="AstraMilitarum/TerraxDisciplineDescription" value=""/>
-	<entry name="AstraMilitarum/TerraxDisciplineFlavor" value=""/>
+	<!-- <entry name="AstraMilitarum/TerraxDisciplineDescription" value="Adjacent allies gain increased accuracy and lose less morale."/> -->
+	<entry name="AstraMilitarum/TerraxDisciplineFlavor" value="Being assigned to operate with what is effectively a regiment of commissars is simultaneous inspiring and (much more so) terrifying. Guardsmen find themselves standing straighter and training more often, lest they risk being made an example of. It was bad enough with one pair of eyes, and now there's an entire platoon watching your every move."/>
 	<entry name="AstraMilitarum/TerraxOvercharged" value="Overcharged Weapon"/>
-	<entry name="AstraMilitarum/TerraxOverchargedDescription" value=""/>
-	<entry name="AstraMilitarum/TerraxOverchargedFlavor" value=""/>
+	<!-- <entry name="AstraMilitarum/TerraxOverchargedDescription" value=""/> -->
+	<entry name="AstraMilitarum/TerraxOverchargedFlavor" value="<string name='Actions/AstraMilitarum/TerraxOverchargePlasmaFlavor'/>"/>
 	<entry name="AstraMilitarum/TerraxThrownPistol" value="Pistol Thrown"/>
-	<entry name="AstraMilitarum/TerraxThrownPistolDescription" value=""/>
-	<entry name="AstraMilitarum/TerraxThrownPistolFlavor" value=""/>
+	<entry name="AstraMilitarum/TerraxThrownPistolDescription" value="Ranged weapon is unavailable."/>
+	<entry name="AstraMilitarum/TerraxThrownPistolFlavor" value="An overloaded plasma pistol's explosion will turn its wielder into a bubbling puddle of flesh. Throwing the weapon away can save the user's life, and it can even take the enemy's. However, guardsmen will have trouble explaining to the commissar why they decided that their life was worth more than a rare, meticulously crafted weapon. Many troopers find themselves handed over to the Adeptus Mechanicus for sentencing, and of those who can still feel, few remain satisfied with the decision they made on the battlefield."/>
 </language>
