--- a/Terrax Guard/Data/Core/Languages/English/Actions.xml
+++ b/Terrax Guard/Data/Core/Languages/English/Actions.xml
@@ -12,6 +12,7 @@
 	<entry name="AstraMilitarum/TerraxUseMeltagun" value="Fire Meltaguns"/>
 	<entry name="AstraMilitarum/TerraxUseMeltagunDescription" value="Half the squad fires Meltaguns."/>
 	<entry name="AstraMilitarum/TerraxUseMeltagunFlavor" value="Terrax Guardsmen prefer to carry Meltaguns as their special weapons. Each squad equips half of its members with them, and they are deployed when enemy armour is too thick for hotshot laspistols."/>
+	<!-- Terrax Colonel -->
 	<entry name="AstraMilitarum/TerraxColonelDiscipline" value="<string name='Traits/AstraMilitarum/TerraxColonelDiscipline'/>"/>
 	<entry name="AstraMilitarum/TerraxColonelDisciplineDescription" value="Affects adjacent allied infantry. Radius is also increased upon maxxing out this Action's level. <string name='Traits/AstraMilitarum/TerraxColonelDisciplineDescription'/>"/>
 	<entry name="AstraMilitarum/TerraxColonelDisciplineFlavor" value="<string name='Traits/AstraMilitarum/TerraxColonelDisciplineFlavor'/>"/>
