--- a/Terrax Guard/Data/Core/Languages/English/Actions.xml
+++ b/Terrax Guard/Data/Core/Languages/English/Actions.xml
@@ -14,7 +14,7 @@
 	<entry name="AstraMilitarum/TerraxUseMeltagunFlavor" value="Terrax Guardsmen prefer to carry Meltaguns as their special weapons. Each squad equips half of its members with them, and they are deployed when enemy armour is too thick for hotshot laspistols."/>
 	<!-- Terrax Colonel -->
 	<entry name="AstraMilitarum/TerraxColonelDiscipline" value="<string name='Traits/AstraMilitarum/TerraxColonelDiscipline'/>"/>
-	<entry name="AstraMilitarum/TerraxColonelDisciplineDescription" value="Affects adjacent allied infantry. Radius is also increased upon maxxing out this Action's level. <string name='Traits/AstraMilitarum/TerraxColonelDisciplineDescription'/>"/>
+	<entry name="AstraMilitarum/TerraxColonelDisciplineDescription" value="Grants Discipline to adjacent allied infantry. Grants <string name='Traits/AstraMilitarum/TerraxColonelDiscipline'/> to allied infantry within 2 tiles; within 3 tiles at max level of <string name='Traits/AstraMilitarum/TerraxColonelDiscipline'/>. <string name='Traits/AstraMilitarum/TerraxColonelDisciplineDescription'/>"/>
 	<entry name="AstraMilitarum/TerraxColonelDisciplineFlavor" value="<string name='Traits/AstraMilitarum/TerraxColonelDisciplineFlavor'/>"/>
 	<entry name="AstraMilitarum/TerraxKillOrBeKilled" value="<string name='Traits/AstraMilitarum/TerraxKillOrBeKilled'/>"/>
 	<entry name="AstraMilitarum/TerraxKillOrBeKilledDescription" value="Target an allied infantry unit. <string name='Traits/AstraMilitarum/TerraxKillOrBeKilledDescription'/>"/>
