reordered text for ocd

--- a/Terrax Guard/Data/Core/Languages/English/Actions.xml
+++ b/Terrax Guard/Data/Core/Languages/English/Actions.xml
@@ -1,17 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <language>
+	<!-- Terrax Guardsmen -->
+	<entry name="AstraMilitarum/TerraxUseMeltagun" value="Fire Meltaguns"/>
+	<entry name="AstraMilitarum/TerraxUseMeltagunDescription" value="Half the squad fires Meltaguns."/>
+	<entry name="AstraMilitarum/TerraxUseMeltagunFlavor" value="Terrax Guardsmen prefer to carry Meltaguns as their special weapons. Each squad equips half of its members with them, and they are deployed when enemy armour is too thick for hotshot laspistols."/>
+	<!-- Terrax Storm Trooper-->
 	<entry name="AstraMilitarum/TerraxOverchargePlasma" value="Overcharge Plasma Pistol"/>
 	<entry name="AstraMilitarum/TerraxOverchargePlasmaDescription" value="Makes the Plasma Pistol stronger at the cost of increased self-damage."/>
 	<entry name="AstraMilitarum/TerraxOverchargePlasmaFlavor" value="Plasma beams exude intense heat, and handling plasma weapons requires managing this heat. Typically, these weapons are kept in safe mode, where pulling the trigger is limited in the amount of power expulsed. When the adversary is too powerful even for these shots, plasma weapons can be overcharged to remove this limitation, which greatly increases the risk of the weapon overloading and boiling its user alive."/>
 	<entry name="AstraMilitarum/TerraxThrowPlasma" value="Throw Overloaded Plasma Pistol"/>
 	<entry name="AstraMilitarum/TerraxThrowPlasmaDescription" value="Use the pistols as a grenade, dealing massive damage but removing the weapons from use."/>
 	<entry name="AstraMilitarum/TerraxThrowPlasmaFlavor" value="<string name='Weapons/TerraxExplodingPlasmaPistolFlavor'/>"/>
+	<!-- Terrax Lascannon Squad -->
 	<entry name="AstraMilitarum/LascannonExecution" value="<string name='Actions/SummaryExecution'/>"/>
 	<entry name="AstraMilitarum/LascannonExecutionDescription" value="Executes two squad member of an infantry or vehicle unit within three tiles to restore morale of nearby allied units."/>
 	<entry name="AstraMilitarum/LascannonExecutionFlavor" value="<string name='Actions/SummaryExecutionFlavor'/>"/>
-	<entry name="AstraMilitarum/TerraxUseMeltagun" value="Fire Meltaguns"/>
-	<entry name="AstraMilitarum/TerraxUseMeltagunDescription" value="Half the squad fires Meltaguns."/>
-	<entry name="AstraMilitarum/TerraxUseMeltagunFlavor" value="Terrax Guardsmen prefer to carry Meltaguns as their special weapons. Each squad equips half of its members with them, and they are deployed when enemy armour is too thick for hotshot laspistols."/>
 	<!-- Terrax Colonel -->
 	<entry name="AstraMilitarum/TerraxColonelDiscipline" value="<string name='Traits/AstraMilitarum/TerraxColonelDiscipline'/>"/>
 	<entry name="AstraMilitarum/TerraxColonelDisciplineDescription" value="Grants Discipline to adjacent allied infantry. Grants <string name='Traits/AstraMilitarum/TerraxColonelDiscipline'/> to allied infantry within 2 tiles; within 3 tiles at max level of <string name='Traits/AstraMilitarum/TerraxColonelDiscipline'/>. <string name='Traits/AstraMilitarum/TerraxColonelDisciplineDescription'/>"/>
